[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scripts/ArenaGame.gd" type="Script" id=1]
[ext_resource path="res://Characters/PlayerGunner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/gungeonback.jpg" type="Texture" id=3]
[ext_resource path="res://Scenes/CameraLimits.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/PracticeChar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/BAUHS93.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/HealerProfile.png" type="Texture" id=7]
[ext_resource path="res://Assets/MagoProfile.png" type="Texture" id=8]
[ext_resource path="res://Assets/PistoleraProfile.png" type="Texture" id=9]
[ext_resource path="res://Assets/GuerreroProfile.png" type="Texture" id=10]
[ext_resource path="res://Assets/Tiles/Pizarra Vacia.png" type="Texture" id=11]
[ext_resource path="res://Assets/Tiles/Table.png" type="Texture" id=12]
[ext_resource path="res://Assets/Tiles/32x32Ground2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Tiles/Pizarra Operaciones.png" type="Texture" id=14]
[ext_resource path="res://Assets/Tiles/Estanteria Libros.png" type="Texture" id=15]
[ext_resource path="res://Assets/Tiles/Estanteria Vacia.png" type="Texture" id=16]
[ext_resource path="res://Assets/HouseInterior.png" type="Texture" id=17]
[ext_resource path="res://Assets/BlackBackground.png" type="Texture" id=18]
[ext_resource path="res://Assets/Game Boy Advance - Mother 3 JPN - Yado Inn Interior (1).png" type="Texture" id=19]
[ext_resource path="res://Assets/Game Boy Advance - Mother 3 JPN - Wesss House Interior (1).png" type="Texture" id=20]
[ext_resource path="res://Assets/Game Boy Advance - Mother 3 JPN - Alecs House Interior (2).png" type="Texture" id=21]
[ext_resource path="res://Assets/Game Boy Advance - Mother 3 JPN - Flints House Interior.png" type="Texture" id=22]

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 32, 48, 0, 48, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 32, 48, 0, 48, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 48, 32, 0, 32, 0, 0, 48, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 48, 32, 0, 32, 0, 0, 48, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 64, 48, 0, 48, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=7]
1/name = "Estanteria Libros.png 1"
1/texture = ExtResource( 15 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 16, 32, 48 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 8 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Estanteria Vacia.png 2"
2/texture = ExtResource( 16 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 16, 32, 48 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 9 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Pizarra Operaciones.png 3"
3/texture = ExtResource( 14 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 48, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 10 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Pizarra Vacia.png 4"
4/texture = ExtResource( 11 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 48, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 11 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Table.png 5"
5/texture = ExtResource( 12 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 16, 64, 48 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 12 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "32x32Ground2.png 6"
6/texture = ExtResource( 13 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[sub_resource type="DynamicFont" id=3]
size = 8
outline_size = 1
outline_color = Color( 0.513726, 0.105882, 0.360784, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 1
outline_color = Color( 0.0823529, 0.713726, 0.196078, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 15
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 15
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 15
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="ArenaGame" type="Node2D"]
script = ExtResource( 1 )

[node name="BlackBackground" type="Sprite" parent="."]
position = Vector2( 350, 175 )
scale = Vector2( 3, 3 )
texture = ExtResource( 18 )

[node name="GameBoyAdvance-Mother3Jpn-FlintsHouseInterior" type="Sprite" parent="."]
position = Vector2( -364, 155 )
texture = ExtResource( 22 )

[node name="GameBoyAdvance-Mother3Jpn-WesssHouseInterior(1)" type="Sprite" parent="."]
position = Vector2( 874, 697 )
texture = ExtResource( 20 )

[node name="GameBoyAdvance-Mother3Jpn-YadoInnInterior(1)" type="Sprite" parent="."]
position = Vector2( -364, 655 )
texture = ExtResource( 19 )

[node name="GameBoyAdvance-Mother3Jpn-AlecsHouseInterior(2)" type="Sprite" parent="."]
position = Vector2( 876, 153 )
texture = ExtResource( 21 )

[node name="HouseInterior" type="Sprite" parent="."]
position = Vector2( -58, 369 )
texture = ExtResource( 17 )
offset = Vector2( 294, 72 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
format = 1
tile_data = PoolIntArray( -196608, 5, 0, -196606, 5, 0, -196604, 5, 0, -196602, 5, 0, -196600, 5, 0, -196598, 5, 0, -196596, 5, 0, -196594, 5, 0, -65537, 2, 0, -131056, 2, 0, -1, 1, 0, -65536, 6, 0, -65535, 6, 0, -65534, 6, 0, -65533, 6, 0, -65532, 6, 0, -65531, 6, 0, -65530, 6, 0, -65529, 6, 0, -65528, 6, 0, -65527, 6, 0, -65526, 6, 0, -65525, 6, 0, -65524, 6, 0, -65523, 6, 0, -65522, 6, 0, -65521, 6, 0, -65520, 1, 0, 65533, 5, 0, 65535, 1, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 16, 1, 0, 17, 5, 0, 131071, 1, 0, 65536, 6, 0, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 65551, 6, 0, 65552, 1, 0, 196605, 5, 0, 196607, 1, 0, 131072, 6, 0, 131073, 6, 0, 131074, 6, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 6, 0, 131085, 6, 0, 131086, 6, 0, 131087, 6, 0, 131088, 1, 0, 131089, 5, 0, 262143, 1, 0, 196608, 6, 0, 196609, 6, 0, 196610, 6, 0, 196611, 6, 0, 196612, 6, 0, 196613, 6, 0, 196614, 6, 0, 196615, 6, 0, 196616, 6, 0, 196617, 6, 0, 196618, 6, 0, 196619, 6, 0, 196620, 6, 0, 196621, 6, 0, 196622, 6, 0, 196623, 6, 0, 196624, 1, 0, 327677, 5, 0, 327679, 1, 0, 262144, 6, 0, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262150, 6, 0, 262151, 6, 0, 262152, 6, 0, 262153, 6, 0, 262154, 6, 0, 262155, 6, 0, 262156, 6, 0, 262157, 6, 0, 262158, 6, 0, 262159, 6, 0, 262160, 1, 0, 262161, 5, 0, 393215, 1, 0, 327680, 6, 0, 327681, 6, 0, 327682, 6, 0, 327683, 6, 0, 327684, 6, 0, 327685, 6, 0, 327686, 6, 0, 327687, 6, 0, 327688, 6, 0, 327689, 6, 0, 327690, 6, 0, 327691, 6, 0, 327692, 6, 0, 327693, 6, 0, 327694, 6, 0, 327695, 6, 0, 327696, 1, 0, 458749, 5, 0, 458751, 1, 0, 393216, 6, 0, 393217, 6, 0, 393218, 6, 0, 393219, 6, 0, 393220, 6, 0, 393221, 6, 0, 393222, 6, 0, 393223, 6, 0, 393224, 6, 0, 393225, 6, 0, 393226, 6, 0, 393227, 6, 0, 393228, 6, 0, 393229, 6, 0, 393230, 6, 0, 393231, 6, 0, 393232, 1, 0, 393233, 5, 0, 524287, 1, 0, 458752, 6, 0, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 458768, 1, 0, 589823, 1, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 1, 0 )

[node name="Gungeonback" type="Sprite" parent="."]
visible = false
position = Vector2( 242, 135 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="PracticeChar" parent="." instance=ExtResource( 5 )]
position = Vector2( 203, 60 )
scale = Vector2( 2, 2 )
collision_layer = 1

[node name="Stats" parent="PracticeChar" index="0"]
movSpeed = 0.0

[node name="AnimationTree" parent="PracticeChar" index="4"]
parameters/playback = SubResource( 1 )

[node name="CameraLimits" parent="." instance=ExtResource( 4 )]
position = Vector2( 241, 136 )
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = false

[node name="TopLeft" parent="CameraLimits/Limits" index="0"]
position = Vector2( -861, -234 )

[node name="BottomRight" parent="CameraLimits/Limits" index="1"]
position = Vector2( 1182, 1010 )

[node name="PlayerGunner" parent="." instance=ExtResource( 2 )]
position = Vector2( 192, 124 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PlayerGunner"]
position = Vector2( 49, 12 )
remote_path = NodePath("../../CameraLimits")

[node name="GeneratePosition" type="Position2D" parent="."]
position = Vector2( 241, 136 )

[node name="Interface" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="Interface"]
margin_left = 2.0
margin_top = 1.0
margin_right = 320.0
margin_bottom = 180.0

[node name="CharacterSelect" type="PopupMenu" parent="Interface/UI"]
margin_left = 1.0
margin_top = 19.0
margin_right = 108.0
margin_bottom = 119.0
items = [ "Gunner", ExtResource( 9 ), 2, true, false, 0, 0, null, "", false, "Healer", ExtResource( 7 ), 2, false, false, 1, 0, null, "", false, "Warrior", ExtResource( 10 ), 2, false, false, 2, 0, null, "", false, "Mage", ExtResource( 8 ), 2, false, false, 3, 0, null, "", false ]

[node name="Exit" type="Button" parent="Interface/UI"]
margin_left = 298.0
margin_top = 3.0
margin_right = 315.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "X"

[node name="Character" type="Button" parent="Interface/UI"]
margin_left = 4.0
margin_top = 5.0
margin_right = 55.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "Character"

[node name="MouseL" type="Button" parent="Interface/UI"]
margin_left = 58.0
margin_top = 146.0
margin_right = 89.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 4 )
text = "ML"

[node name="TimerML" type="Timer" parent="Interface/UI/MouseL"]
one_shot = true

[node name="MouseR" type="Button" parent="Interface/UI"]
margin_left = 144.0
margin_top = 148.0
margin_right = 177.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 5 )
text = "MR"

[node name="TimerMR" type="Timer" parent="Interface/UI/MouseR"]
one_shot = true

[node name="ButtonQ" type="Button" parent="Interface/UI"]
margin_left = 238.0
margin_top = 152.0
margin_right = 269.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 6 )
text = "Q"

[node name="TimerBQ" type="Timer" parent="Interface/UI/ButtonQ"]
one_shot = true

[connection signal="id_pressed" from="Interface/UI/CharacterSelect" to="." method="_on_CharacterSelect_id_pressed"]
[connection signal="pressed" from="Interface/UI/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Interface/UI/Character" to="." method="_on_Character_pressed"]
[connection signal="timeout" from="Interface/UI/MouseL/TimerML" to="." method="_on_TimerML_timeout"]
[connection signal="timeout" from="Interface/UI/MouseR/TimerMR" to="." method="_on_TimerMR_timeout"]
[connection signal="timeout" from="Interface/UI/ButtonQ/TimerBQ" to="." method="_on_TimerBQ_timeout"]

[editable path="PracticeChar"]
[editable path="PracticeChar/Hurtbox"]
[editable path="CameraLimits"]
